<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_FFFFFF">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rootView_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_line_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp" />


            <!--添加配置信息，可输入一些变量-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_middle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/guide_line_start">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_title_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingVertical="15dp"
                    android:paddingLeft="20dp"
                    android:text="@string/add_counts"
                    android:textColor="@color/color_000000"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.syxfree.insertcalllog.utils.CustomEditText
                    android:id="@+id/add_count_config"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/edittext_bg"
                    android:enabled="true"
                    android:gravity="center"
                    android:hint="@string/hint_counts"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/hint_counts_num"
                    android:textColor="@color/color_000000"
                    android:textColorHint="@color/color_999999"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/text_title_count"
                    app:layout_constraintLeft_toRightOf="@+id/text_title_count"
                    app:layout_constraintTop_toTopOf="@+id/text_title_count" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/layout_middle">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/clickadd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_bg"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="15dp"
                    android:text="@string/app_name"
                    android:textColor="@color/color_000000"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/clickseelog"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/app_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/clickseelog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_bg"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="15dp"
                    android:text="@string/view_call_logs"
                    android:textColor="@color/color_000000"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toRightOf="@+id/clickadd"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/view_call_logs" />
            </androidx.constraintlayout.widget.ConstraintLayout>



            <!--输入-->

            <!--添加配置信息，可输入一些变量-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_middle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/layout_bottom">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_title_count2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingVertical="15dp"
                    android:paddingLeft="20dp"
                    android:text="@string/usephonetitle"
                    android:textColor="@color/color_000000"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.syxfree.insertcalllog.utils.CustomEditText
                    android:id="@+id/add_count_config2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/edittext_bg"
                    android:enabled="true"
                    android:gravity="center"
                    android:hint="@string/usephone"
                    android:inputType="number"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/color_000000"
                    android:textColorHint="@color/color_999999"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/text_title_count2"
                    app:layout_constraintLeft_toRightOf="@+id/text_title_count2"
                    app:layout_constraintTop_toTopOf="@+id/text_title_count2" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_bottom2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/layout_middle2">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/clickadd2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_bg"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="15dp"
                    android:text="@string/incoming"
                    android:textColor="@color/color_000000"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/clickseelog2"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/incoming" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/clickseelog2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_bg"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="15dp"
                    android:text="@string/outgoing"
                    android:textColor="@color/color_000000"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toRightOf="@+id/clickadd2"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/outgoing" />
            </androidx.constraintlayout.widget.ConstraintLayout>



            <!--test button-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_bottom_sms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/layout_bottom">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/clickadd_sms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_bg"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="15dp"
                    android:text="@string/insert_sms_logs"
                    android:textColor="@color/color_000000"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/insert_sms_logs" />


            </androidx.constraintlayout.widget.ConstraintLayout>




        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>